--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "5.0.0-beta.14",
     "@mui/material": "^5.14.8",
+    "@mui/system": "^5.14.8",
+    "@mui/utils": "^5.14.8",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
